[package]
name = "grids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
flatvec = "0.3.0"
ndarray = "0.15.6"
phf = { version = "0.11.1", features = ["phf_macros", "macros"] }
rand = "0.8.5"
smallvec = "1.10.0"
