[package]
name = "grids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
arrayvec = "0.7.4"
flatvec = "0.3.0"
ndarray = { version = "0.15.6", features = ["rayon", "approx", "approx-0_5"] }
phf = { version = "0.11.1", features = ["phf_macros", "macros"] }
rand = "0.8.5"
smallvec = "1.10.0"
